--- a/assets/css/categories.css
+++ b/assets/css/categories.css
@@ -27,17 +27,19 @@
     padding: 10px;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
   }
   .category-item-name {
     text-align: center;
     margin-block: 5px;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 15px;
     white-space: nowrap;
   }
   
   .category-item-name span {
-    font-weight: 200;
+    font-weight: 300;
+    font-size: 16px
   }
   
   .category-image {
