--- a/assets/css/categories.css
+++ b/assets/css/categories.css
@@ -6,6 +6,7 @@
 
 
 #product-categories {
+    margin-top: 60px;
     box-shadow: 0 1px 1px 0 rgb(0 0 0 / 16%);
     background-color: white;
     width: 100%;
