--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -6,6 +6,9 @@
   background: #2874f0;
   padding-block: 10px;
   color: white;
+  width: 100%;
+  position: fixed;
+  top: 0;
 }
 
 #nav-container {
